sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart=getNombreValeurs() 
  var s=false
  do{
    s=false
    if (ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt
    }
    var i=0
    for (j <- i+ecart to getNombreValeurs()){
      if (!plusPetit(j, j+1) ){
        echange(j,j+1)
        s=true
      }
      j=j+1
    }
  }while(ecart>1 || s)
}